# rustchef

./: Cargo.toml  Dockerfile  README.md
samples/: sample.txt
src/: main.rs  ops.rs
tests/: unit_tests.rs
